# rust-cxx-cmake

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
common-rs/: Cargo.toml  build.rs
common-rs/src/: lib.rs
middle-cpp/: CMakeLists.txt  middle_cpp.cpp  middle_cpp.h
middle-rs/: Cargo.toml  build.rs
middle-rs/src/: lib.rs
runner-cpp/: CMakeLists.txt  main.cpp
runner-rs/: Cargo.toml  build.rs
runner-rs/src/: main.rs
