[package]
name = "middle-rs"
version = "0.1.0"
edition = "2024"
links = "middle-rs"

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
common-rs = { path = "../common-rs" }
cxx = { version = "1.0.141", features = ["c++17"] }

[build-dependencies]
cxx-build = { version = "1.0.141", features = ["parallel"] }
